--- a/THSharp.Game/THSharp.Game.csproj
+++ b/THSharp.Game/THSharp.Game.csproj
@@ -11,7 +11,7 @@
   <ItemGroup>
     <ProjectReference Include="..\osu-framework\osu.Framework\osu.Framework.csproj" />
     <ProjectReference Include="..\Symcol.Core\Symcol.Core.csproj" />
-    <ProjectReference Include="..\touhou.sharp.Game.Resources\THSharp.Game.Resources.csproj" />
+    <ProjectReference Include="..\THSharp.Game.Resources\THSharp.Game.Resources.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
