--- a/Symcol.Core/Symcol.Core.csproj
+++ b/Symcol.Core/Symcol.Core.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\touhou.sharp.Game.props" />
+  <Import Project="..\THSharp.Game.props" />
   <PropertyGroup Label="Project">
     <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
