--- a/THSharp.Gamemodes.TouhouSharp/THSharp.Gamemodes.TouhouSharp.csproj
+++ b/THSharp.Gamemodes.TouhouSharp/THSharp.Gamemodes.TouhouSharp.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\THSharp.Game.props" />
   <PropertyGroup Label="Project">
-    <TargetFrameworks>net471;netcoreapp2.0</TargetFrameworks>
-    <AssemblyTitle>THSharp.Desktop</AssemblyTitle>
-    <Description>TouhouSharp's executable</Description>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyTitle>THSharp.Gamemodes.TouhouSharp</AssemblyTitle>
+    <Description>THSharp</Description>
+    <OutputType>Library</OutputType>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <ApplicationIcon />
-    <OutputType>WinExe</OutputType>
-    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\osu-framework\osu.Framework\osu.Framework.csproj" />
     <ProjectReference Include="..\Symcol.Core\Symcol.Core.csproj" />
     <ProjectReference Include="..\THSharp.Game.Resources\THSharp.Game.Resources.csproj" />
     <ProjectReference Include="..\THSharp.Game\THSharp.Game.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
 </Project>
