--- a/THSharp.Desktop/THSharp.Desktop.csproj
+++ b/THSharp.Desktop/THSharp.Desktop.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\osu-framework\osu.Framework\osu.Framework.csproj" />
     <ProjectReference Include="..\Symcol.Core\Symcol.Core.csproj" />
     <ProjectReference Include="..\THSharp.Game.Resources\THSharp.Game.Resources.csproj" />
+    <ProjectReference Include="..\THSharp.Gamemodes.TouhouSharp\THSharp.Gamemodes.TouhouSharp.csproj" />
     <ProjectReference Include="..\THSharp.Game\THSharp.Game.csproj" />
   </ItemGroup>
 </Project>
