--- a/THSharp.Game.Resources/THSharp.Game.Resources.csproj
+++ b/THSharp.Game.Resources/THSharp.Game.Resources.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Remove="Assets\Textures\bulletKiai.png" />
     <None Remove="Assets\Textures\Dean.png" />
+    <None Remove="Assets\Textures\Enemy Overlay.png" />
     <None Remove="Assets\Textures\enemy.png" />
     <None Remove="Assets\Textures\enemyKiai.png" />
     <None Remove="Assets\Textures\gearLarge.png" />
@@ -58,8 +59,8 @@
   <ItemGroup>
     <EmbeddedResource Include="Assets\Textures\bulletKiai.png" />
     <EmbeddedResource Include="Assets\Textures\Dean.png" />
+    <EmbeddedResource Include="Assets\Textures\Enemy Overlay.png" />
     <EmbeddedResource Include="Assets\Textures\Enemy.png" />
-    <EmbeddedResource Include="Assets\Textures\enemyKiai.png" />
     <EmbeddedResource Include="Assets\Textures\gearLarge.png" />
     <EmbeddedResource Include="Assets\Textures\gearMedium.png" />
     <EmbeddedResource Include="Assets\Textures\gearSmall.png" />
